# ChangeLog for dev-perl/MooseX-Getopt
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/MooseX-Getopt/ChangeLog,v 1.14 2010/04/09 07:44:12 tove Exp $

  09 Apr 2010; Torsten Veller <tove@gentoo.org> -MooseX-Getopt-0.26.ebuild:
  Cleanup

*MooseX-Getopt-0.27 (03 Mar 2010)

  03 Mar 2010; Torsten Veller <tove@gentoo.org> +MooseX-Getopt-0.27.ebuild:
  Version bump

  24 Dec 2009; Torsten Veller <tove@gentoo.org> -MooseX-Getopt-0.23.ebuild,
  -MooseX-Getopt-0.24.ebuild, -MooseX-Getopt-0.25.ebuild:
  Cleanup

*MooseX-Getopt-0.26 (11 Dec 2009)

  11 Dec 2009; Torsten Veller <tove@gentoo.org> +MooseX-Getopt-0.26.ebuild:
  Version bump

*MooseX-Getopt-0.25 (28 Nov 2009)

  28 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
  +MooseX-Getopt-0.25.ebuild:
  Version bump via perl-bump experimental tool.

*MooseX-Getopt-0.24 (24 Oct 2009)

  24 Oct 2009; Torsten Veller <tove@gentoo.org> +MooseX-Getopt-0.24.ebuild:
  Version bump

  12 Oct 2009; Torsten Veller <tove@gentoo.org> -MooseX-Getopt-0.22.ebuild:
  Cleanup

*MooseX-Getopt-0.23 (06 Oct 2009)

  06 Oct 2009; Torsten Veller <tove@gentoo.org> +MooseX-Getopt-0.23.ebuild:
  Version bump

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -MooseX-Getopt-0.18.ebuild,
  -MooseX-Getopt-0.20.ebuild, -MooseX-Getopt-0.21.ebuild:
  Cleanup

*MooseX-Getopt-0.22 (06 Sep 2009)

  06 Sep 2009; Torsten Veller <tove@gentoo.org> +MooseX-Getopt-0.22.ebuild:
  Version bump

*MooseX-Getopt-0.21 (28 Aug 2009)

  28 Aug 2009; Torsten Veller <tove@gentoo.org> +MooseX-Getopt-0.21.ebuild:
  Version bump

*MooseX-Getopt-0.20 (10 Jul 2009)

  10 Jul 2009; Torsten Veller <tove@gentoo.org> +MooseX-Getopt-0.20.ebuild:
  Version bump

  23 Jun 2009; Torsten Veller <tove@gentoo.org> MooseX-Getopt-0.18.ebuild:
  Merge with perl-experimental version

*MooseX-Getopt-0.18 (23 Jun 2009)

  23 Jun 2009; Robin H. Johnson <robbat2@gentoo.org>
  +MooseX-Getopt-0.18.ebuild, +metadata.xml: