@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/MooseX-Getopt
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/MooseX-Getopt/ChangeLog,v 1.14 2010/04/09 07:44:12 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/MooseX-Getopt/ChangeLog,v 1.15 2010/06/06 12:40:53 tove Exp $
+
+*MooseX-Getopt-0.28 (06 Jun 2010)
+
+  06 Jun 2010; Torsten Veller <tove@gentoo.org> +MooseX-Getopt-0.28.ebuild:
+  Version bump
 
   09 Apr 2010; Torsten Veller <tove@gentoo.org> -MooseX-Getopt-0.26.ebuild:
   Cleanup
